res/config-file-grammar
<config>  ::= ( <ws>* <assign>? <comment>? '\n' )*
<comment> ::= '#' [^\n]*
<assign>  ::= <varid> <ws>* '=' <ws>* <value>
<varid>   ::= [-_a-zA-Z0-9]+
<value>   ::= '<?' [^('?>')]* '?>' <ws>*
            | [^('#'|'\n')]*                    # remove trailing <ws>*
<ws>      ::= ' ' | '\t'
